FIX: fixed scrolling issue on iOs

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,7 +28,7 @@ input {
 }
 
 .home-inner {
-  @apply p-4 overflow-x-hidden;
+  @apply p-4 overflow-x-scroll;
 }
 
 article .movie {
